Revision history for Net-Silverpeak-Orchestrator

{{ $NEXT }}

0.015002  2024-09-04 15:51:17+02:00 Europe/Vienna
    - ensure all URI parameters are URI encoded

0.015001  2024-08-24 19:44:11+02:00 Europe/Vienna
    - fix list_domain_applications for Orchestrator version 9.3+

0.015000  2024-08-16 09:37:50+02:00 Europe/Vienna
    - add get_appliance_bgp_system_config_allvrfs

0.014000  2024-08-14 14:35:22+02:00 Europe/Vienna
    - add get_appliance_bgp_system_config
    - add get_appliance_bgp_neighbors

0.013000  2024-05-23 12:34:48+02:00 Europe/Vienna
    - add get_appliance_ipsla_configs
    - add get_appliance_ipsla_states

0.012000  2024-04-29 10:00:36+02:00 Europe/Vienna
    - add list_groups

0.011000  2024-04-22 17:58:39+02:00 Europe/Vienna
    - add support for version 9.3+ API endpoints

0.010000  2024-03-04 14:28:16+01:00 Europe/Vienna
    - add get_vrf_zones_map

0.009000  2024-03-04 13:05:30+01:00 Europe/Vienna
    - add has_segmentation_enabled
    - add get_vrf_security_policies_by_ids
    - add update_vrf_security_policies_by_ids

0.008000  2023-09-14 14:21:59+02:00 Europe/Vienna
    - enable TLS verification by default
      by requiring HTTP::Tiny 0.088

0.007000  2023-06-22 15:37:13+02:00 Europe/Vienna
    - add get_appliance_extrainfo method
    - add get_deployment method
    - add get_interface_state method
    - add get_interface_labels_by_type method
    - add get_ha_groups_by_id method
    - add get_vrf_by_id method

0.006000  2023-05-08 17:30:22+02:00 Europe/Budapest
    - add support for user/password login when Enforce CSRF Token Check is
      enabled

0.005000  2022-01-17 15:31:52+01:00 Europe/Vienna
    - fix list_application_groups ok when nested application groups exist
      the returned hash also contains a 'parentGroup' key if it's nested
    - add is_logged_in attribute
    - automatically log out when object is destroyed
      to not leave stale Orchestrator sessions

0.004000  2021-11-10 11:50:05+01:00 Europe/Vienna