@@ -1,6 +1,7 @@
 Revision history for Net-Silverpeak-Orchestrator
 
 {{ $NEXT }}
+    - add get_appliance_backups
 
 0.015002  2024-09-04 15:51:17+02:00 Europe/Vienna
     - ensure all URI parameters are URI encoded
